# SLAMNotes

./: CS学习资源和SLAM实验室记录.md  README.md
DeepLearning/DeepGraphLearning/: Deep Graph Learnning.md
DeepLearning/DeepGraphLearning/Chapter One/: Graph.py
DeepLearning/DeepGraphLearning/Chapter three/: Building GNN Modules.py
DeepLearning/untitled/: 1.py
code_snippet/3DReconstruction/: CMakeLists.txt  homegrayCompute.cpp
code_snippet/3DReconstruction/Feature/: CMakeLists.txt  HarrisCornerDetector.cpp
code_snippet/3DReconstruction/GMSMatcher/comparison/: CMakeLists.txt  comparison.cpp  siftRansac.cpp  siftRansac.h
code_snippet/3DReconstruction/GMSMatcher/src/: demo.cpp
code_snippet/3DReconstruction/MySIFT/: sift.cpp
code_snippet/3DReconstruction/MySIFT/Feature/featureDetector/: CMakeLists.txt
code_snippet/3DReconstruction/MySIFT/Feature/featureDetector/src/: CMakeLists.txt  FeatureDetector.cpp  FeatureDetector.h  testFeatureDetector.cpp
code_snippet/3DReconstruction/MySIFT/Feature/featureMatcher/: CMakeLists.txt
code_snippet/3DReconstruction/MySIFT/Feature/featureMatcher/src/: CMakeLists.txt  FeatureMatcher.cpp  FeatureMatcher.h  testFeatureMatcher.cpp
code_snippet/3DReconstruction/SIFT+RANSAC/: CMakeLists.txt  siftRansac.cpp
code_snippet/3DReconstruction/Utility/: Ulitity.h
code_snippet/3DReconstruction/src/: CMakeLists.txt  EGGraph.cpp  EGGraph.h  FeatureManager.cpp  GMSMatcher.h  ImageLoader.cpp  ImageLoader.h  Track.h  TrackManager.cpp  TrackManager.h  Utility.cpp  Utility.h  main.cpp  test.cpp
code_snippet/3DReconstruction/src/feature/: CMakeLists.txt  FeatureManager.cpp  FeatureManager.h  GMSMatcher.cpp  GMSMatcher.h  test.cpp
code_snippet/3DReconstruction/src/tracks/: CMakeLists.txt  ImagePair.cpp  ImagePair.h  Tracks.cpp  Tracks.h  test.cpp
code_snippet/C++/ceres_tutorials/: CMakeLists.txt  main.cpp
code_snippet/C++/ceres_tutorials/tools/: bal_problem.cc
code_snippet/C++/functor/: CMakeLists.txt  main.cpp
code_snippet/DeepBlue/: README.md
code_snippet/DeepBlue/3D_reconstruction/ImageBasedModellingEdu/examples/: CMakeLists.txt
code_snippet/DeepBlue/3D_reconstruction/ImageBasedModellingEdu/examples/task1/: CMakeLists.txt  class1_test_matching.cc
code_snippet/DeepBlue/3D_reconstruction/ImageBasedModellingEdu/examples/task2/: CMakeLists.txt  class2_test_bundle_adjustment.cc  class2_test_fundamental_8_point.cc  class2_test_fundamental_ransac.cc
code_snippet/DeepBlue/3D_reconstruction/ImageBasedModellingEdu/features/: matching.h  sift.cc
code_snippet/DeepBlue/3D_reconstruction/ImageBasedModellingEdu/sfm/: bundle_adjustment.cc  fundamental.cc
code_snippet/DeepBlue/SLAM/homework/week_1/: hw.md
code_snippet/DeepBlue/SLAM/homework/week_1/hello/: CMakeLists.txt
code_snippet/DeepBlue/SLAM/homework/week_1/hello/src/: CMakeLists.txt
code_snippet/DeepBlue/SLAM/homework/week_2/: CMakeLists.txt  geometry.cpp
code_snippet/DeepBlue/SLAM/homework/week_3/6/: CMakeLists.txt  draw_trajectory.cpp
code_snippet/DeepBlue/SLAM/homework/week_3/7/: CMakeLists.txt  compare_trajectory.cpp  draw_trajectory.cpp
code_snippet/DeepBlue/SLAM/homework/week_4/: hw4.aux  hw4.tex
code_snippet/DeepBlue/SLAM/homework/week_4/2/: CMakeLists.txt  undistort_image.cpp
code_snippet/DeepBlue/SLAM/homework/week_4/3/: CMakeLists.txt  disparity.cpp
code_snippet/DeepBlue/SLAM/homework/week_4/4/: CMakeLists.txt  gaussnewton.cpp
code_snippet/DeepBlue/SLAM/homework/week_4/test/: CMakeLists.txt  main.cpp
code_snippet/DeepBlue/SLAM/homework/week_5/2/: CMakeLists.txt  computeORB.cpp
code_snippet/DeepBlue/SLAM/homework/week_5/3/: E2Rt.cpp
code_snippet/DeepBlue/SLAM/第一讲/: 第一讲：概述与预备知识.txt
code_snippet/DeepBlue/SLAM/第五讲/: .~第五讲：特征点法视觉里程计.pptx
code_snippet/DesignPattern/LSP/: CMakeLists.txt  Gun.h  Soldier.h  main.cpp  readme.md
code_snippet/Hierarchical-Localization/: matching_plot.py  simple_nms.py  video_capture.py
code_snippet/OpenGL/: CMakeLists.txt
code_snippet/OpenGL/cmake/: LinkGLEW.cmake  LinkGLFW.cmake  LinkOpenGL.cmake  SetAppTarget.cmake  UseGLEW.cmake  UseGLFW.cmake
code_snippet/OpenGL/src/: CMakeLists.txt
code_snippet/OpenGL/src/triangle/: CMakeLists.txt
code_snippet/OpenGL/src/window/: CMakeLists.txt  window.cpp
code_snippet/cuda/: CMakeLists.txt
code_snippet/cuda/01_introduction_to_cuda/: add.cpp  add.cu  add_block.cu  add_grid.cu  dataElem_um_c++_1.cu  dataElem_um_c++_2.cu  readme.md
code_snippet/cuda/02_performance_metric/: README.md  a.out  timing_add.cu
code_snippet/cuda/03_query_device_properties/: README.md  handle_errors.cu  query_device.cu
code_snippet/cuda/04_separate_compilation_and_linking/: CMakeLists.txt  README.md  main.cu  particle.cu  particle.cuh  v3.cu  v3.cuh
code_snippet/cuda/data_transfer/: data_transfer.cu
code_snippet/cuda/global_memory/: coalescing.cu
code_snippet/cuda/matrix_transpose/: matrix_transpose.cu
code_snippet/cuda/performance_metric/: performance_metric.cu
code_snippet/cuda/shared_memory/: shared_memory.cu
code_snippet/openimageio/: CMakeLists.txt
code_snippet/openimageio/ReadImage/: CMakeLists.txt  read_image.cpp
code_snippet/openimageio/WriteImage/: CMakeLists.txt  write_image.cpp
code_snippet/openimageio/cmake/: FindOpenImageIO.cmake  LinkOpenImageIO.cmake
shell/: template.sh
